{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 53,
  "lineage": "41e1efe8-5cdf-6a2a-97b7-005e89db066a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "broker",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-03c81bb205b509acb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c81bb205b509acb",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0696226db2fd01ce9",
            "private_dns": "ip-10-0-1-217.eu-west-1.compute.internal",
            "private_ip": "10.0.1.217",
            "public_dns": "ec2-3-248-225-168.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.225.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03193bc1ff661bdb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-broker-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "connect",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-0a536527334d09a35",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a536527334d09a35",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c3c2e524f089a37f",
            "private_dns": "ip-10-0-1-57.eu-west-1.compute.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-52-50-205-196.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.205.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c07a79dd780d8a81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-connect-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_center",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-082b19a9c497b9727",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082b19a9c497b9727",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed7521e310783390",
            "private_dns": "ip-10-0-1-204.eu-west-1.compute.internal",
            "private_ip": "10.0.1.204",
            "public_dns": "ec2-3-248-199-133.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.199.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cf9bc92c6513e572",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-control-center-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ksql",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-0ffe260212150759b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffe260212150759b",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afdb87c3549d09f7",
            "private_dns": "ip-10-0-1-164.eu-west-1.compute.internal",
            "private_ip": "10.0.1.164",
            "public_dns": "ec2-52-50-209-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.209.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-041ae839b7d35d324",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-ksql-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rest",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-040ef267cc96f5430",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040ef267cc96f5430",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a6314dc2e1fb3343",
            "private_dns": "ip-10-0-1-209.eu-west-1.compute.internal",
            "private_ip": "10.0.1.209",
            "public_dns": "ec2-34-247-87-177.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.87.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07418172043291f29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-rest-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "schema",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-0090ef21a28d3bb3f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0090ef21a28d3bb3f",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03df19206af034e73",
            "private_dns": "ip-10-0-1-32.eu-west-1.compute.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-34-245-178-217.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.178.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06e05a6cc6ece61a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-schema-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "zookeeper",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040ba9174949f6de4",
            "arn": "arn:aws:ec2:eu-west-1:924338216746:instance/i-0655821ce1179654f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0655821ce1179654f",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-ansible-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066c6c762e07d1700",
            "private_dns": "ip-10-0-1-249.eu-west-1.compute.internal",
            "private_ip": "10.0.1.249",
            "public_dns": "ec2-3-248-226-83.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.226.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-004f004e50e11f300",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05eba5b5ace07b4c2",
            "tags": {
              "Name": "kafka-zookeeper-staging-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e388add41955c1b"
            ]
          },
          "dependencies": [
            "aws_security_group.kafka_sg",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924338216746:internet-gateway/igw-040ed4e1520e8c7e7",
            "id": "igw-040ed4e1520e8c7e7",
            "owner_id": "924338216746",
            "tags": {
              "Name": "kafka_gw"
            },
            "vpc_id": "vpc-058e4866beb673077"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-040ed4e1520e8c7e7",
            "id": "r-rtb-0c0b0ce06096ac4621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0b0ce06096ac462",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e0ce3f002fa6757a",
            "owner_id": "924338216746",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-040ed4e1520e8c7e7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Kafka Public Subnet"
            },
            "vpc_id": "vpc-058e4866beb673077"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7ceacdb2ab0e876",
            "route_table_id": "rtb-0e0ce3f002fa6757a",
            "subnet_id": "subnet-05eba5b5ace07b4c2"
          },
          "dependencies": [
            "aws_route_table.default",
            "aws_subnet.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924338216746:security-group/sg-02e388add41955c1b",
            "description": "Accept incoming connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e388add41955c1b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Control Center",
                "from_port": 9021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9021
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "JMX",
                "from_port": 1099,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1099
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "KSQL Server REST API",
                "from_port": 8088,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka Brokers",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kafka Connect REST API",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "REST Proxy",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Schema Registry REST API",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZooKeeper",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZooKeeper",
                "from_port": 2888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2888
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ZooKeeper",
                "from_port": 3888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3888
              }
            ],
            "name": "vpc_kafka_sg",
            "name_prefix": null,
            "owner_id": "924338216746",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kafka_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-058e4866beb673077"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924338216746:subnet/subnet-05eba5b5ace07b4c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05eba5b5ace07b4c2",
            "map_public_ip_on_launch": true,
            "owner_id": "924338216746",
            "tags": {
              "Name": "Kafka Public Subnet"
            },
            "vpc_id": "vpc-058e4866beb673077"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924338216746:vpc/vpc-058e4866beb673077",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c09293a6ca049d0a",
            "default_route_table_id": "rtb-0c0b0ce06096ac462",
            "default_security_group_id": "sg-023b331c355386918",
            "dhcp_options_id": "dopt-81f2f0e5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-058e4866beb673077",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0b0ce06096ac462",
            "owner_id": "924338216746",
            "tags": {
              "Name": "Kafka VPC"
            }
          }
        }
      ]
    }
  ]
}